<resources>
    <string name="app_name">NY Times</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login_screen">LoginScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="sign_up_title">Sign Up</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_pasword">Confirm Pasword</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="log_in_activity">Log In</string>
    <string name="authentication_failed">Authentication Failed</string>
    <string name="credentials_not_registered">User with these credentials is not registered</string>
    <string name="try_again">Try Again</string>
    <string name="password_requirements">Password should be from 8 to 20 characters string with at least one digit, one upper case letter, one lower case letter and one special symbol (“@#$%!”)</string>
    <string name="confirm_pass_incorrect">Confirmation password is not correct</string>
    <string name="sign_up_failed">Sigh Up Failed</string>
    <string name="user_already_registered">User with such credentials is already registered</string>
    <string name="cancel">Cancel</string>
    <string name="fill_request">Please fill all fields</string>
    <string name="invalid_email">Please type valid email address</string>
    <string name="no_Photo_app">No application found to take pictures</string>
    <string name="set_image_title">Set image</string>
    <string name="set_image_text">Set image from gallery or take a new one ?</string>
    <string name="take_new">Take new</string>
    <string name="gallery">Gallery</string>
    <string name="SignUpActivity">SignUpActivity</string>
    <string name="settings">Settings</string>
    <string name="filter">Filter</string>
    <string name="log_out">Log Out</string>
    <string name="filter_preference">filter</string>
    <string name="filter_preference_summary">Tap to filter what NY Categories to display</string>
    <string name="filter_preference_title">Filter categories</string>
    <string name="log_out_preference">log_out</string>
    <string name="log_out_preference_title">Log Out</string>
    <string name="log_out_prompt">Do you want to log out ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_internet_connection">No connection to internet!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_main3">Main3Activity</string>
</resources>
