<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main">
    <android.support.constraint.ConstraintLayout
        android:id="@+id/activity_log_in"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.example.akremlov.nytimes.activity.LogInActivity"
        android:background="@color/background_main">
        <TextView
            android:text="@string/log_in_activity"
            android:layout_width="0dp"
            android:id="@+id/log_in"
            android:textSize="@dimen/header_text_size"
            android:gravity="center"
            android:background="@color/background_header"
            android:textColor="@android:color/white"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_height="@dimen/edit_text_height"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:layout_width="0dp"
            android:inputType="textPersonName"
            android:hint="@string/username"
            android:ems="10"
            android:id="@+id/username_login"
            app:layout_constraintTop_toBottomOf="@+id/log_in"
            android:layout_marginTop="@dimen/edit_text_margin"
            android:layout_marginEnd="@dimen/edit_text_margin"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="@dimen/edit_text_margin"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_height="@dimen/edit_text_height"
            android:background="@drawable/rectangle"
            android:gravity="center"
            android:cursorVisible="false"/>

        <EditText
            android:layout_width="0dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password_login"
            app:layout_constraintTop_toBottomOf="@+id/username_login"
            android:layout_marginTop="@dimen/edit_text_margin"
            android:layout_marginEnd="@dimen/edit_text_margin"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="@dimen/edit_text_margin"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_height="@dimen/edit_text_height"
            android:background="@drawable/rectangle"
            android:hint="@string/password"
            android:gravity="center"/>

        <Button
            android:text="@string/log_in_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_button"
            android:layout_marginTop="@dimen/button_margin_top_lgin"
            app:layout_constraintTop_toBottomOf="@+id/password_login"
            android:layout_marginEnd="@dimen/edit_text_margin"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="@dimen/edit_text_margin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/edit_text_margin" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>
</layout>